add: working on folders api and connecting them with client
